changed a few things

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <p>
         welcome
-        <a href="register.php">register page</a>
+        <a href="register.html">register page</a>
     </p>
 </body>
 </html>
