--- a/register.html
+++ b/register.html
@@ -2,58 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tags</title>
 </head>
 <body>
-    <div>
-        <h3 class="text-center bg-dark text-white">Feedback Form</h3>
-    <form class="bg-dark text-white" action="">
-        <div class="text-center">
-            <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" required><br><br>
-        </div>
-
-        <div class="text-center">
-            <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lastName" required><br><br>
-        </div>
-
-        <div class="text-center">
-            <label for="emailAddress">Email</label>
-            <input type="email" name="emailAddress" id="emailAddress" required><br><br>
-        </div>
-
-        <div>
-            <label for="number">Phone number</label>
-            <input type="text" name="number" id="number">><br><br>
-        </div>
-        <div>
-            <label for="sDate">Start Date</label>
-            <input type="text" name="sDate" id="startDate" required>><br><br>
-        </div>
-        <div>
-            <label for="eDate">End Date</label>
-            <input type="text" name="eDate" id="endDate" required><br><br>
-        </div>
-        <div>
-            <label for="pCheck">Police check</label>
-            <input type="radio" name="policeCheck" value="Yes">Yes<label></label><br>
-            <input type="radio" name="policeCheck" value="No">No<label></label><br>
-        </div>
-        <div>
-            <label for="dateApplied">Date Applied</label>
-            <input type="text" name="dateApplied" id="dApplied" required><br><br>
-        </div>
-        <div>
-            <label for="dateReceived">Date Received</label>
-            <input type="text" name="dateReceived" id="dReceived" required><br><br>
-        </div>
-        <br>
-        <div class="text-center">
-            <button class="btn btn-primary" id="submitFeedback" type="submit">Submit</button>
-        </div>
-    </form>
+<div>
+  <h3 class="text-center bg-dark text-white">Feedback Form</h3>
+  <form class="bg-dark text-white" action="">
+    <div class="text-center">
+      <label for="firstName">First Name</label>
+      <input type="text" name="firstName" id="firstName" required><br><br>
     </div>
+
+    <div class="text-center">
+      <label for="lastName">Last Name</label>
+      <input type="text" name="lastName" id="lastName" required><br><br>
+    </div>
+
+    <div class="text-center">
+      <label for="emailAddress">Email</label>
+      <input type="email" name="emailAddress" id="emailAddress" required><br><br>
+    </div>
+
+    <div>
+      <label for="number">Phone number</label>
+      <input type="text" name="number" id="number">><br><br>
+    </div>
+    <div>
+      <label for="sDate">Start Date</label>
+      <input type="date" name="sDate" id="sDate" required>><br><br>
+    </div>
+    <div>
+      <label for="eDate">End Date</label>
+      <input type="date" name="eDate" id="eDate" required><br><br>
+    </div>
+    <div>
+      <label>Police check</label>
+      <input type="radio" name="pCheck" value="Yes">Yes<label></label><br>
+      <input type="radio" name="pCheck" value="No">No<label></label><br>
+    </div>
+    <div>
+      <label for="dApplied">Date Applied</label>
+      <input type="date" name="dateApplied" id="dApplied" required><br><br>
+    </div>
+    <div>
+      <label for="dReceived">Date Received</label>
+      <input type="date" name="dateReceived" id="dReceived" required><br><br>
+    </div>
+    <br>
+    <div class="text-center">
+      <button class="btn btn-primary" id="submitFeedback" type="submit">Submit</button>
+    </div>
+  </form>
+</div>
 </body>
 </html>
